--- a/part3/package.json
+++ b/part3/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shih hao",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
