--- a/part3/hw_phonebook/package.json
+++ b/part3/hw_phonebook/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "hw_phonebook",
+  "name": "phonebook",
   "version": "0.0.1",
-  "description": "hw for part 3",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "shih hao",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
