--- a/part3/hw_phonebook/package.json
+++ b/part3/hw_phonebook/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
