--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.9.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
