--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "shih hao",
   "license": "MIT",
@@ -19,6 +20,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "eslint": "^8.34.0",
     "nodemon": "^2.0.20"
   }
 }
