--- a/part4_blogList/package.json
+++ b/part4_blogList/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"  
   },
   "author": "shih hao",
   "license": "MIT",
@@ -22,6 +22,10 @@
   },
   "devDependencies": {
     "eslint": "^8.34.0",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
