--- a/part4_blogList/package.json
+++ b/part4_blogList/package.json
@@ -9,7 +9,7 @@
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint .",
-    "test": "jest --verbose"  
+    "test": "jest --verbose"
   },
   "author": "shih hao",
   "license": "MIT",
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "request": "^2.88.2"
   },
