--- a/part4/package.json
+++ b/part4/package.json
@@ -9,7 +9,7 @@
     "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "lint": "eslint .",
-    "test": "NODE_ENV=test jest --verbose --runInBand"  
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "shih hao",
   "license": "MIT",
@@ -23,9 +23,11 @@
   "devDependencies": {
     "eslint": "^8.34.0",
     "jest": "^29.4.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
