--- a/part5/package.json
+++ b/part5/package.json
@@ -18,7 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 --watch db.json",
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-jest": "^27.2.1",
     "json-server": "^0.17.1"
   },
   "proxy": "http://localhost:3001"
