--- a/part5_bloglist_frontend/package.json
+++ b/part5_bloglist_frontend/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "frontend",
+  "name": "part2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.3",
+    "axios": "^1.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "server": "json-server -p3001 --watch db.json",
     "eslint": "eslint ."
   },
   "eslintConfig": {
@@ -38,8 +36,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003",
   "devDependencies": {
-    "eslint-plugin-jest": "^27.2.1"
-  }
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "eslint-plugin-jest": "^27.2.1",
+    "json-server": "^0.17.1"
+  },
+  "proxy": "http://localhost:3003"
 }
