--- a/part7/webpack_part7/package.json
+++ b/part7/webpack_part7/package.json
@@ -7,11 +7,16 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@babel/core": "^7.21.3",
+        "@babel/preset-react": "^7.18.6",
+        "babel-loader": "^9.1.2",
         "webpack": "^5.76.2",
         "webpack-cli": "^5.0.1"
     },
     "dependencies": {
+        "core-js": "^3.29.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "regenerator-runtime": "^0.13.11"
     }
 }
