--- a/part7/webpack_part7/package.json
+++ b/part7/webpack_part7/package.json
@@ -3,15 +3,18 @@
     "version": "0.0.1",
     "description": "practising webpack",
     "scripts": {
-        "build": "webpack --mode=development"
+        "build": "webpack --mode=development",
+        "start": "webpack serve --mode=development"
     },
     "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.21.3",
+        "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "babel-loader": "^9.1.2",
         "webpack": "^5.76.2",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.12.0"
     },
     "dependencies": {
         "core-js": "^3.29.1",
