--- a/part7/webpack_part7/package.json
+++ b/part7/webpack_part7/package.json
@@ -17,6 +17,7 @@
         "webpack-dev-server": "^4.12.0"
     },
     "dependencies": {
+        "axios": "^1.3.4",
         "core-js": "^3.29.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
