--- a/part7_hw1/package.json
+++ b/part7_hw1/package.json
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:3003",
+  "devDependencies": {
+    "prettier": "2.8.4"
   }
 }
