--- a/part8/server/package.json
+++ b/part8/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.5.0",
-    "graphql": "^16.6.0"
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "mongoose": "^7.0.3"
   }
 }
