--- a/part8_hw/server/package.json
+++ b/part8_hw/server/package.json
@@ -12,6 +12,7 @@
     "@apollo/server": "^4.5.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "mongoose-unique-validator": "^3.1.0"
   }
