--- a/part9/package.json
+++ b/part9/package.json
@@ -11,6 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.192",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
