--- a/part9/package.json
+++ b/part9/package.json
@@ -7,7 +7,8 @@
     "ts-node": "ts-node",
     "multiply": "ts-node multiplier.ts",
     "calculate": "ts-node calculate.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,10 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
