9b The horrors of any

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "eslint.workingDirectories": [
+        "./part9",
+        "./part9_hw"
+      ]
 }
