--- a/part9/package.json
+++ b/part9/package.json
@@ -8,7 +8,8 @@
     "multiply": "ts-node multiplier.ts",
     "calculate": "ts-node calculate.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,9 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
